# tube2txt

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  README.md  WINDOWS-INSTALL.md  docker-compose.yml  hub.py  index_existing.py  list_models.py  pyproject.toml  railway.json  test_validation.db  tube2txt.py  tube2txt.sh
.claude/: settings.json  settings.local.json
.claude/agents/: security-reviewer.md
.claude/skills/add-ai-mode/: SKILL.md
.claude/skills/api-doc/: SKILL.md
.claude/skills/gen-test/: SKILL.md
.claude/skills/pr-check/: SKILL.md
.claude/skills/process-debug/: SKILL.md
.claude/skills/project-conventions/: SKILL.md
.claude/skills/release-notes/: SKILL.md
.superpowers/brainstorm/3395-1774440024/: .server-stopped  architecture-overview.html  tui-screens.html
GEM-PLAN/: 2025-03-24-tube2txt-design.md
docs/: DEPLOYMENT.md
docs/superpowers/plans/: 2026-03-25-gridland-tui-integration.md  2026-03-25-gridland-tui-integration.md.tasks.json  2026-03-25-gridland-web-showcase.md  2026-03-29-transcript-first-integration.md
docs/superpowers/specs/: 2026-03-25-gridland-tui-integration-design.md  2026-03-25-gridland-web-showcase-design.md  (+1 more)
scripts/: backup.sh  build.sh  deploy.sh  purge-projects.sh  setup.sh  test.sh
src/: cookies.txt
src/tube2txt/: __init__.py  ai.py  clipping.py  db.py  downloader.py  hub.py  index_existing.py  parsers.py
src/tube2txt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api.py  test_db.py  test_generator.py  test_parsers.py  test_process_video.py  test_transcript.py
tui/: index.html  package.json
tui/src/: App.tsx  index.tsx  web.tsx
tui/src/components/: VideoCard.tsx  (+3 more)
(+7 files in other folders)
