[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tube2txt"
version = "2.0.0"
authors = [
  { name="Kasey Hinchman", email="kasey.hinchman@gmail.com" },
]
description = "A hybrid Bash/Python tool to convert YouTube videos to structured web pages with AI outlines."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-genai",
    "python-dotenv",
]

[project.scripts]
tube2txt-py = "tube2txt:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tube2txt.py"]
