[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tube2txt"
version = "3.1.0"
authors = [
  { name="Kasey Hinchman", email="kasey.hinchman@gmail.com" },
]
description = "A hybrid Bash/Python tool to convert YouTube videos to structured web pages with AI outlines, a local hub dashboard, and smart clips."
readme = "README.md"
license = { text="MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-genai",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "yt-dlp",
    "websockets",
]

[project.scripts]
tube2txt = "tube2txt:main"
tube2txt-hub = "tube2txt.hub:start_hub"
tube2txt-index = "tube2txt.index_existing:migrate"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tube2txt*"]
